# serial-arduino-2-fs

./: CMakeLists.txt  ProjectHome.md
src/: main.cpp
src/comm/: lanserialbridge.cpp  lanserialbridge.h  myserialport.cpp  serialprotocol.cpp  serialprotocol.h
src/comm/impl/: siocbridge.cpp  siocbridge.h
test/src/: main.cpp
test/src/comm/: lanserialbridge.cpp  serialprotocol.cpp
